--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -79,7 +79,7 @@ header button {
 	color: #2e2f42;
 }
 
-.timer-box button {
+.timer-box .startBtn {
 	border-radius: 8px;
 	padding: 8px 16px;
 	width: 75px;
